# Mafunca

./: .gitignore  LICENSE  README.md  pypi.md  pyproject.toml
.github/workflows/: publish.yml
mafunca/: _lazy_support.py  curry.py  eff.py  eff_sync.py  effsync.py  io.py  maybe.py  maybe_transformer.py  resilient.py  resilient_sync.py  result.py  result_maybe.py  result_transformer.py  side.py  side_async.py  side_async_runners.py  side_rebuild_report.py  side_report.py  side_runners.py  specials.py  state_sync.py  triple.py
mafunca/common/: __init__.py  _lazy_support.py  _panics.py  _resilient_specs.py  exceptions.py  panics.py  resilient_support.py  side_support.py
src/: curry.py  eff.py  effsync.py  triple.py
tests/: test_all.py  test_curry.py  test_eff.py  test_eff_sync.py  test_effsync.py  test_maybe.py  test_maybe_transformer.py  test_resilient.py  test_resilient_sync.py  test_result.py  test_result_maybe.py  test_result_transformer.py  test_side.py  test_side_async.py  test_triple_and_curry.py
